--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@ zzzz
 </div>
 </div>
 
+<div class='blogPost'>
+<h2><a href='/heading2'>Heading2</a></h2>
+<div class='postInfo'>
+<span class='date'>Wednesday, November 21, 2018</span>
+<span class='tags'>
+</span>
+</div>
+<div class='postContent'>
+
+</div>
+</div>
+
 <div class="footer">
 &copy;2018 Rush Frisby
 </div>
