--- a/index.html
+++ b/index.html
@@ -3,52 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Rush's Blog</title>
+	<title>Rush Frisby</title>
 </head>
 <body>
-<div class='blogPost'>
-<h2><a href='/testing'>Testing</a></h2>
-<div class='postInfo'>
-<span class='date'>Monday, January 1, 2018</span>
-<span class='tags'>
-</span>
-</div>
-<div class='postContent'>
-zzzz
-</div>
-</div>
-
-<div class='blogPost'>
-<h2><a href='/software-developer'>Software Developer</a></h2>
-<div class='postInfo'>
-<span class='date'>Thursday, November 1, 2018</span>
-<span class='tags'>
-</span>
-</div>
-<div class='postContent'>
-<p>asdlamsdlmlmlmalsdmalsmdlamsd</p>
-<ul>
-<li>Blah</li>
-<li>Blah</li>
-<li>Blah</li>
-</ul>
-</div>
-</div>
-
-<div class='blogPost'>
-<h2><a href='/image-test'>Image test</a></h2>
-<div class='postInfo'>
-<span class='date'>Tuesday, November 20, 2018</span>
-<span class='tags'>
-</span>
-</div>
-<div class='postContent'>
-<p>This is an image…</p>
-<p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
-<p>Cool</p>
-</div>
-</div>
-
 <div class='blogPost'>
 <h2><a href='/heading2'>Heading2</a></h2>
 <div class='postInfo'>
@@ -111,6 +68,49 @@ zzzz
 <h4 id="heading-50">Heading</h4>
 <h5 id="heading-51">Heading</h5>
 <h6 id="heading-52">Heading</h6>
+</div>
+</div>
+
+<div class='blogPost'>
+<h2><a href='/image-test'>Image test</a></h2>
+<div class='postInfo'>
+<span class='date'>Tuesday, November 20, 2018</span>
+<span class='tags'>
+</span>
+</div>
+<div class='postContent'>
+<p>This is an image…</p>
+<p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
+<p>Cool</p>
+</div>
+</div>
+
+<div class='blogPost'>
+<h2><a href='/software-developer'>Software Developer</a></h2>
+<div class='postInfo'>
+<span class='date'>Thursday, November 1, 2018</span>
+<span class='tags'>
+</span>
+</div>
+<div class='postContent'>
+<p>asdlamsdlmlmlmalsdmalsmdlamsd</p>
+<ul>
+<li>Blah</li>
+<li>Blah</li>
+<li>Blah</li>
+</ul>
+</div>
+</div>
+
+<div class='blogPost'>
+<h2><a href='/testing'>Testing</a></h2>
+<div class='postInfo'>
+<span class='date'>Monday, January 1, 2018</span>
+<span class='tags'>
+</span>
+</div>
+<div class='postContent'>
+zzzz
 </div>
 </div>
 
