--- a/heading2.html
+++ b/heading2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Rush's Blog</title>
+	<title>Heading2</title>
 </head>
 <body>
 <div class='blogPost'>
