--- a/heading2.html
+++ b/heading2.html
@@ -69,6 +69,10 @@
 <h5 id="heading-51">Heading</h5>
 <h6 id="heading-52">Heading</h6>
 </div>
+<div class='postFooter'>
+<hr/>
+(Comments)
+</div>
 </div>
 
 <div class="footer">
