--- a/image-test.html
+++ b/image-test.html
@@ -18,6 +18,10 @@
 <p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
 <p>Cool</p>
 </div>
+<div class='postFooter'>
+<hr/>
+(Comments)
+</div>
 </div>
 
 <div class="footer">
