--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 <h5 id="heading-51">Heading</h5>
 <h6 id="heading-52">Heading</h6>
 </div>
+<div class='postFooter postFooterEmpty'>
+</div>
 </div>
 
 <div class='blogPost'>
@@ -82,6 +84,8 @@
 <p>This is an image…</p>
 <p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
 <p>Cool</p>
+</div>
+<div class='postFooter postFooterEmpty'>
 </div>
 </div>
 
@@ -100,6 +104,8 @@
 <li>Blah</li>
 </ul>
 </div>
+<div class='postFooter postFooterEmpty'>
+</div>
 </div>
 
 <div class='blogPost'>
@@ -111,6 +117,8 @@
 </div>
 <div class='postContent'>
 zzzz
+</div>
+<div class='postFooter postFooterEmpty'>
 </div>
 </div>
 
