--- a/archive.html
+++ b/archive.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>Image test</title>
+<title>Archive</title>
 <meta name="HandheldFriendly" content="True" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="/favicon.ico">
@@ -12,9 +12,9 @@
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400" />
 <meta property="og:site_name" content="Rush Frisby" />
 <meta property="og:type" content="article" />
-<meta property="og:title" content="Image test" />
+<meta property="og:title" content="Archive" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:title" content="Image test" />
+<meta name="twitter:title" content="Archive" />
 <meta name="twitter:label1" content="Written by" />
 <meta name="twitter:data1" content="Rush Frisby" />
 <!--<link rel="alternate" type="application/rss+xml" title="Rush Frisby's Blog" href="https://rushfrisby.com/rss/" />-->
@@ -44,24 +44,14 @@
 </header>
 <main id="content" class="content" role="main">
 <div id="article" class="box ">
-<div class='blogPost'>
-<h2><a href='/image-test'>Image test</a></h2>
-<div class='postInfo'>
-<span class='date'>Tuesday, November 20, 2018</span>
-<span class='tags'>
-</span>
-</div>
-<div class='postContent'>
-<p>This is an image…</p>
-<p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
-<p>Cool</p>
-</div>
-<div class='postFooter'>
-<hr/>
-(Comments)
-</div>
-</div>
-
+<h2 class='archive'>Archive</h2>
+<h3 class='year'>2018</h3>
+<ol>
+<li><span class='date'>11/21/2018</span><a href='/heading2' class='title'>Heading2</span></li>
+<li><span class='date'>11/20/2018</span><a href='/image-test' class='title'>Image test</span></li>
+<li><span class='date'>11/1/2018</span><a href='/software-developer' class='title'>Software Developer</span></li>
+<li><span class='date'>1/1/2018</span><a href='/testing' class='title'>Testing</span></li>
+</ol>
 </div>
 <div id="sidebar"><div class="box sidebox about">
 <div class="sidebox-title">About</div>
