--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script src="/js/prism.js" type="text/javascript"></script>
 <header id="header">
 <nav class="header-nav" ">
-<div class="blog-title"><a href="https://rushfrisby.com">Rush Frisby</a></div>
+<div class="blog-title"><a href="/">Rush Frisby</a></div>
 <div class="blog-description">Thoughts on software and technology.</div>
 
 <div class="taglist-wrapper clearfix">
@@ -37,6 +37,12 @@
 </li>
 <li class="nav-mechanical-keyboards" role="presentation">
 <a href="/mechanical-keyboards">Mechanical Keyboards</a>
+</li>
+<li class="nav-about" role="presentation">
+<a href="/tags">Tags</a>
+</li>
+<li class="nav-about" role="presentation">
+<a href="/archive">Archive</a>
 </li>
 </ul>
 </div>
