--- a/archive.html
+++ b/archive.html
@@ -53,10 +53,10 @@
 <h2 class='archive'>Archive</h2>
 <h3 class='year'>2018</h3>
 <ol>
-<li><span class='date'>11/21/2018</span><a href='/heading2' class='title'>Heading2</span></li>
-<li><span class='date'>11/20/2018</span><a href='/image-test' class='title'>Image test</span></li>
-<li><span class='date'>11/1/2018</span><a href='/software-developer' class='title'>Software Developer</span></li>
-<li><span class='date'>1/1/2018</span><a href='/testing' class='title'>Testing</span></li>
+<li><span class='date'>11/21/2018</span><a href='/heading2' class='title'>Heading2</a></li>
+<li><span class='date'>11/20/2018</span><a href='/image-test' class='title'>Image test</a></li>
+<li><span class='date'>11/1/2018</span><a href='/software-developer' class='title'>Software Developer</a></li>
+<li><span class='date'>1/1/2018</span><a href='/testing' class='title'>Testing</a></li>
 </ol>
 </div>
 <div id="sidebar"><div class="box sidebox about">
