--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 <h5 id="heading-51">Heading</h5>
 <h6 id="heading-52">Heading</h6>
 </section>
+<footer class='post-footer'>
+</footer>
 </article>
 
 <article class='post'>
@@ -127,6 +129,8 @@
 <p><img src="/img/globe48.png" alt="globe48" title="A globe!"></p>
 <p>Cool</p>
 </section>
+<footer class='post-footer'>
+</footer>
 </article>
 
 <article class='post'>
@@ -144,6 +148,8 @@
 <li>Blah</li>
 </ul>
 </section>
+<footer class='post-footer'>
+</footer>
 </article>
 
 <article class='post'>
@@ -156,6 +162,8 @@
 <section class='post-content'>
 zzzz
 </section>
+<footer class='post-footer'>
+</footer>
 </article>
 
 </div>
