--- a/tags.html
+++ b/tags.html
@@ -75,7 +75,7 @@
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
-<section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+<section class="poweredby">Proudly published with my own blog engine</section>
 </footer>
 <script type="text/javascript">
 var links = document.links;
