--- a/archive.html
+++ b/archive.html
@@ -56,7 +56,90 @@
 <li><span class='date'>11/21/2018</span><a href='/heading2' class='title'>Heading2</a></li>
 <li><span class='date'>11/20/2018</span><a href='/image-test' class='title'>Image test</a></li>
 <li><span class='date'>11/1/2018</span><a href='/software-developer' class='title'>Software Developer</a></li>
+<li><span class='date'>8/2/2018</span><a href='/interface-to-rpc-service' class='title'>Interface to RPC Service</a></li>
+<li><span class='date'>5/7/2018</span><a href='/dev-tty-keycaps' class='title'>/dev/tty MT3 Custom Keycap Set</a></li>
+<li><span class='date'>5/7/2018</span><a href='/varmilo-va87mr' class='title'>Varmilo VA87MR Keyboard</a></li>
+<li><span class='date'>5/6/2018</span><a href='/code-keyboard' class='title'>WASD CODE Keyboard</a></li>
 <li><span class='date'>1/1/2018</span><a href='/testing' class='title'>Testing</a></li>
+</ol>
+<h3 class='year'>2017</h3>
+<ol>
+<li><span class='date'>12/8/2017</span><a href='/losing-our-memory' class='title'>Losing Our Memory</a></li>
+<li><span class='date'>8/20/2017</span><a href='/are-coding-bootcamps-worth-it' class='title'>Are Coding Bootcamps Worth It?</a></li>
+<li><span class='date'>8/8/2017</span><a href='/meetup-using-protobuf-in-net' class='title'>Meetup: Using Protobuf in .NET</a></li>
+</ol>
+<h3 class='year'>2016</h3>
+<ol>
+<li><span class='date'>12/16/2016</span><a href='/application-security-and-single-sign-on' class='title'>Application Security and Single Sign On</a></li>
+<li><span class='date'>9/19/2016</span><a href='/net-javascript-engine-performance-results-updated-2016' class='title'>.NET JavaScript Engine Performance Results - Updated 2016</a></li>
+<li><span class='date'>8/10/2016</span><a href='/how-to-detect-and-stop-a-car-from-being-hacked' class='title'>How to Detect and Stop a Car from Being Hacked</a></li>
+<li><span class='date'>6/17/2016</span><a href='/automated-ecu-testing-part-3' class='title'>Automated ECU Testing Part 3 - Video!</a></li>
+<li><span class='date'>5/19/2016</span><a href='/automated-ecu-testing-part-2' class='title'>Automated ECU Testing Part 2</a></li>
+<li><span class='date'>5/10/2016</span><a href='/automated-ecu-testing' class='title'>Automated ECU Testing</a></li>
+<li><span class='date'>4/1/2016</span><a href='/encryptor-extension-for-vs-code' class='title'>Encryptor Extension for VS Code</a></li>
+<li><span class='date'>4/1/2016</span><a href='/issues-running-redis-in-azure' class='title'>Issues Running Redis In Azure</a></li>
+<li><span class='date'>3/28/2016</span><a href='/autonomous-cars-are-a-long-way-off' class='title'>Autonomous Cars Are a Long Way Off</a></li>
+<li><span class='date'>3/28/2016</span><a href='/connected-cars-and-fuel-efficiency' class='title'>Connected Cars and Fuel Efficiency</a></li>
+<li><span class='date'>3/10/2016</span><a href='/2016-conferences' class='title'>2016 Conferences</a></li>
+<li><span class='date'>2/29/2016</span><a href='/mechanical-keyboards' class='title'>Mechanical Keyboards</a></li>
+<li><span class='date'>2/4/2016</span><a href='/redis-flush-tool-for-windows' class='title'>Redis Flush Tool for Windows</a></li>
+<li><span class='date'>1/4/2016</span><a href='/winzopfli-png-compression-tool-for-windows' class='title'>WinZopfli: PNG Compression Tool for Windows</a></li>
+</ol>
+<h3 class='year'>2015</h3>
+<ol>
+<li><span class='date'>10/29/2015</span><a href='/pngout-an-entire-directory-in-windows' class='title'>PNGOUT an Entire Directory in Windows</a></li>
+<li><span class='date'>7/6/2015</span><a href='/running-asp-net-on-ubuntu' class='title'>Running ASP.NET on Ubuntu</a></li>
+<li><span class='date'>6/30/2015</span><a href='/locking-by-key' class='title'>Locking by key</a></li>
+<li><span class='date'>6/18/2015</span><a href='/net-javascript-engine-performance-results' class='title'>.NET JavaScript Engine Performance Results</a></li>
+<li><span class='date'>5/1/2015</span><a href='/update-your-lync-personal-note-to-show-whats-playing-in-aimp' class='title'>Update Your Lync &quot;Personal Note&quot; To Show What&#39;s Playing In AIMP</a></li>
+<li><span class='date'>4/2/2015</span><a href='/serializing-non-serializable-types-with-protobuf' class='title'>Serializing Non-Serializable Types With Protobuf</a></li>
+<li><span class='date'>3/20/2015</span><a href='/using-bootstrap-in-wordpress-admin-panel' class='title'>Using Bootstrap in Wordpress Admin Panel</a></li>
+<li><span class='date'>2/26/2015</span><a href='/evolution-of-the-javascript-rule-engine' class='title'>Evolution of the JavaScript Rule Engine</a></li>
+<li><span class='date'>2/11/2015</span><a href='/trimming-the-fat-off-of-http-endpoints' class='title'>Trimming the Fat Off of HTTP Endpoints</a></li>
+<li><span class='date'>2/4/2015</span><a href='/supporting-one-language-makes-ruleplex-intrinsically-faster' class='title'>Supporting One Language Makes RulePlex Intrinsically Faster</a></li>
+<li><span class='date'>1/29/2015</span><a href='/introducing-ruleplex' class='title'>Introducing RulePlex</a></li>
+</ol>
+<h3 class='year'>2014</h3>
+<ol>
+<li><span class='date'>12/2/2014</span><a href='/unit-testing-azure-storage-in-tfs-build-server' class='title'>Unit Testing Azure Storage in TFS/Build Server</a></li>
+<li><span class='date'>11/25/2014</span><a href='/google-fonts-installer' class='title'>Google Fonts Installer</a></li>
+<li><span class='date'>11/15/2014</span><a href='/error-tf54000-when-creating-a-new-team-project-in-tfs-2013' class='title'>Error TF54000 when creating a new team project in TFS 2013</a></li>
+<li><span class='date'>10/30/2014</span><a href='/online-markdown-editor-encrypting-files-to-the-cloud' class='title'>Online markdown editor encrypting files to the cloud</a></li>
+<li><span class='date'>10/17/2014</span><a href='/improving-webapi-performance-with-jil-and-protocol-buffers' class='title'>Improving WebAPI performance with Jil and Protocol Buffers</a></li>
+<li><span class='date'>10/15/2014</span><a href='/using-a-custom-default-font-color-in-lync-2010' class='title'>Using a custom default font color in Lync 2010</a></li>
+<li><span class='date'>9/17/2014</span><a href='/presenting-ruleplex-at-1million-cups' class='title'>Presenting RulePlex at 1Million Cups</a></li>
+<li><span class='date'>9/8/2014</span><a href='/expiring-links-after-a-given-timeframe' class='title'>Expiring links after a given timeframe</a></li>
+<li><span class='date'>8/8/2014</span><a href='/stopwatch-class-in-javascript' class='title'>Stopwatch Class in JavaScript</a></li>
+<li><span class='date'>8/2/2014</span><a href='/which-net-javascript-engine-is-the-fastest' class='title'>Which .NET JavaScript Engine is the fastest?</a></li>
+<li><span class='date'>6/9/2014</span><a href='/choosing-a-service-framework' class='title'>Choosing a service framework</a></li>
+<li><span class='date'>6/6/2014</span><a href='/run-sql-query-and-email-results' class='title'>Run SQL Query and Email Results</a></li>
+<li><span class='date'>5/29/2014</span><a href='/turboobject' class='title'>TurboObject</a></li>
+<li><span class='date'>5/22/2014</span><a href='/about' class='title'>About Rush</a></li>
+<li><span class='date'>3/20/2014</span><a href='/cast-hacking' class='title'>Cast Hacking</a></li>
+<li><span class='date'>3/10/2014</span><a href='/generate-an-enum-from-a-sql-server-database-table' class='title'>Generate an Enum from a SQL Server Database Table</a></li>
+</ol>
+<h3 class='year'>2013</h3>
+<ol>
+<li><span class='date'>12/2/2013</span><a href='/linq-js-crud-methods' class='title'>Linq.js CRUD Methods</a></li>
+<li><span class='date'>11/5/2013</span><a href='/trick-for-debugging-parallel-code' class='title'>Trick for debugging parallel code</a></li>
+<li><span class='date'>10/30/2013</span><a href='/tesoro-shrike-h2l-laser-gaming-mouse-review' class='title'>Tesoro Shrike H2L Laser Gaming Mouse Review</a></li>
+<li><span class='date'>10/28/2013</span><a href='/max-keyboard-nighthawk-x8-review' class='title'>Max Keyboard Nighthawk X8 Review</a></li>
+<li><span class='date'>8/28/2013</span><a href='/convert-a-list-to-csv' class='title'>Convert a list to CSV</a></li>
+<li><span class='date'>3/25/2013</span><a href='/paranoid-nerd' class='title'>Paranoid Nerd</a></li>
+<li><span class='date'>3/11/2013</span><a href='/file-system-monitor' class='title'>File System Monitor</a></li>
+<li><span class='date'>2/26/2013</span><a href='/secure-password-generator-app' class='title'>Secure Password Generator App</a></li>
+<li><span class='date'>2/25/2013</span><a href='/automatically-creating-sprites-from-css-using-bundler-net' class='title'>Automatically Creating Sprites from CSS using Bundler .NET</a></li>
+<li><span class='date'>2/19/2013</span><a href='/active-page-report-generator' class='title'>Active Page Report Generator</a></li>
+<li><span class='date'>2/14/2013</span><a href='/got-website-backups-left-online' class='title'>Got Website &quot;Backups&quot; Left Online?</a></li>
+<li><span class='date'>2/8/2013</span><a href='/rock-paper-azure-challenge-bot' class='title'>Rock, Paper, Azure Challenge Bot</a></li>
+<li><span class='date'>2/7/2013</span><a href='/digitalblasphemy-com-updater-for-windows' class='title'>DigitalBlasphemy.com Updater for Windows</a></li>
+<li><span class='date'>2/6/2013</span><a href='/c-cryptography-library-md5-sha1-sha2-aes-3des' class='title'>C# Cryptography Library: MD5, SHA1, SHA2, AES, 3DES</a></li>
+</ol>
+<h3 class='year'>2006</h3>
+<ol>
+<li><span class='date'>12/29/2006</span><a href='/c-date-format-regular-expression' class='title'>C# Date Format Regular Expression</a></li>
+<li><span class='date'>12/12/2006</span><a href='/using-repeater-itemcommand' class='title'>Using Repeater ItemCommand</a></li>
+<li><span class='date'>11/21/2006</span><a href='/using-gridview-rowcommand' class='title'>Using GridView RowCommand</a></li>
 </ol>
 </div>
 <div id="sidebar"><div class="box sidebox about">
