--- a/winzopfli-png-compression-tool-for-windows.html
+++ b/winzopfli-png-compression-tool-for-windows.html
@@ -105,6 +105,7 @@
 <a href="/" class="social-item home"><li><i class="fa fa-home"></i></li></a>
 </ul>
 </div>
+{Latest}
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
