--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@ I got this one with a white case and mint key caps just because mint is wacky co
 <a href="/" class="social-item home"><li><i class="fa fa-home"></i></li></a>
 </ul>
 </div>
+{Latest}
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
