--- a/locking-by-key.html
+++ b/locking-by-key.html
@@ -110,6 +110,7 @@ using (new KeyLocker("mykey"))&lt;br&gt;&lt;/br&gt; <br />
 <a href="/" class="social-item home"><li><i class="fa fa-home"></i></li></a>
 </ul>
 </div>
+{Latest}
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
