--- a/mechanical-keyboards.html
+++ b/mechanical-keyboards.html
@@ -252,6 +252,7 @@ I got this board primarily for the LED backlighting because it has so many optio
 <a href="/" class="social-item home"><li><i class="fa fa-home"></i></li></a>
 </ul>
 </div>
+{Latest}
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
