--- a/choosing-a-service-framework.html
+++ b/choosing-a-service-framework.html
@@ -119,7 +119,17 @@
 <a href="/" class="social-item home"><li><i class="fa fa-home"></i></li></a>
 </ul>
 </div>
-{Latest}
+<div class='box sidebox latest-articles'>
+<div class='sidebox-title'>Latest Articles</div>
+<div class='sidebox-content'>
+<a href='/interface-to-rpc-service'><div class='date'>2 AUG 2018</div><div>Interface to RPC Service</div></a>
+<a href='/dev-tty-keycaps'><div class='date'>7 MAY 2018</div><div>/dev/tty MT3 Custom Keycap Set</div></a>
+<a href='/varmilo-va87mr'><div class='date'>7 MAY 2018</div><div>Varmilo VA87MR Keyboard</div></a>
+<a href='/code-keyboard'><div class='date'>6 MAY 2018</div><div>WASD CODE Keyboard</div></a>
+<a href='/losing-our-memory'><div class='date'>8 DEC 2017</div><div>Losing Our Memory</div></a>
+</div>
+</div>
+
 </main>
 <footer class="site-footer clearfix">
 <section class="copyright"><a href="https://rushfrisby.com">Rush Frisby</a> &copy; 2018</section>
