--- a/mechanical-keyboards.html
+++ b/mechanical-keyboards.html
@@ -114,17 +114,17 @@
 <td>Buckling Spring</td>
 </tr>
 <tr>
-<td><a href="/varmilo-va87mr/">Varmilo VA87MR</a></td>
+<td><a href="/varmilo-va87mr">Varmilo VA87MR</a></td>
 <td>Tenkeyless</td>
 <td>Gateron Blue</td>
 </tr>
 <tr>
-<td><a href="/varmilo-va87mr/">Varmilo VA87MR</a></td>
+<td><a href="/varmilo-va87mr">Varmilo VA87MR</a></td>
 <td>Tenkeyless</td>
 <td>Gateron Green</td>
 </tr>
 <tr>
-<td><a href="/varmilo-va87mr/">Varmilo VA87MR</a></td>
+<td><a href="/varmilo-va87mr">Varmilo VA87MR</a></td>
 <td>Tenkeyless</td>
 <td>Cherry MX White</td>
 </tr>
@@ -134,17 +134,17 @@
 <td>Cherry MX Clear</td>
 </tr>
 <tr>
-<td><a href="/code-keyboard/">WASD CODE Keyboard</a></td>
+<td><a href="/code-keyboard">WASD CODE Keyboard</a></td>
 <td>Full</td>
 <td>Cherry MX Clear</td>
 </tr>
 <tr>
-<td><a href="/code-keyboard/">WASD CODE Keyboard</a></td>
+<td><a href="/code-keyboard">WASD CODE Keyboard</a></td>
 <td>Full</td>
 <td>Cherry MX Green</td>
 </tr>
 <tr>
-<td><a href="/code-keyboard/">WASD CODE Keyboard</a></td>
+<td><a href="/code-keyboard">WASD CODE Keyboard</a></td>
 <td>Tenkeyless</td>
 <td>Cherry MX Green</td>
 </tr>
@@ -183,30 +183,30 @@
 </ul>
 <!--
 **Das Keyboard Model S Professional**  
-![DAS_Model_S_Pro](/content/images/2016/04/DAS_Model_S_Pro-1024x364.jpg)
+![DAS_Model_S_Pro](/img/keyboard/DAS_Model_S_Pro-1024x364.jpg)
 This was the first mechanical keyboard I bought in 2012. I bought it with the intention that it would be good to get me introduced to mechanical keyboards. The brown switches were attractive because they weren’t too noisy and had some tactile feel.
 
 Since buying this keyboard I have swapped the Brown switches for Gateron Green ones, changed the blue LED indicator lights to red, and replaced the key caps with a charcoal gray set. It now looks like this...
-![Das Model S Pro with Mods](/content/images/2016/04/das_mod.png)
+![Das Model S Pro with Mods](/img/keyboard/das_mod.png)
 
 **Max Keyboard Nighthawk X8**  
-![Max_Nighthawk_X8](/content/images/2016/04/Max_Nighthawk_X8-1024x355.jpg)
+![Max_Nighthawk_X8](/img/keyboard/Max_Nighthawk_X8-1024x355.jpg)
 This was my second keyboard and I bought it primarily for the back-lighting. I wasn’t comfortable experimenting with different switches at the time which I realize afterwards was something I should have changed.
 
 **Royal Kludge RG-987/928**  
-![Royal_Kludge_RG-987-928](/content/images/2016/04/Royal_Kludge_RG-987-928-1024x403.jpg)
+![Royal_Kludge_RG-987-928](/img/keyboard/Royal_Kludge_RG-987-928-1024x403.jpg)
 My first ten keyless board (that’s what they call keyboards without the numpad). I wanted to try a smaller form factor out which I ended up liking a lot. The RGB backlighting was really cool. Also the white case and keys were different than my previous boards. This one has Black switches which are linear and have a high actuation force. I didn’t like them at first but I got used to them. I ended up switching the key caps that came with the board for some double shot PBT caps which have more professional looking legends on them. I also added large O-rings to lower the noise level.
 
 **Vortex POK3R (Poker 3)**  
-![Vortex_POK3R](/content/images/2016/04/Vortex_POK3R-1024x354.jpg)
+![Vortex_POK3R](/img/keyboard/Vortex_POK3R-1024x354.jpg)
 The form factor on the board is called a 60%. It doesn’t have a dedicated arrow pad and special keys. It also doesn’t have a function key row. Instead there is a “function key” which makes each key serve double duty. For example FN+H is the “Home” key. It also comes with multiple “layers” which means you can hit FN+Layer2 (layer 2, 3, and 4 are programmable, layer 1 is the standard default layout). When you switch to an alternate layer you can program the keys to be anything you want – a single key press, combination of key presses, whatever. I like how small the keyboard is because it looks really elite on my desk but it’s hard to get used to. I’ve only been using it for a couple of weeks and every day seems to be getting easier use. The switches are Clear – they are linear and have a slightly higher actuation force than Black. I like Clear over Black they feel crisp when you type. The caps are PBT and there is no back-lighting. There are a couple of LEDs that come on behind the keys but it is only to indicate when caps lock or an alternative layer is selected.
 
 **The WhiteFox Keyboard**  
-![whitefox](/content/images/2016/04/whitefox-1024x373.jpg)
+![whitefox](/img/keyboard/whitefox-1024x373.jpg)
 I haven’t got this keyboard yet. It was designed by a keyboard enthusiast named “matt3o” with the help of the mechanical keyboard community. It’s a 65% form factor which gives it the dedicated arrow keys, and some special function keys, but for everything else it will require using a Function key to access. The keys are a white cream color combined with some blue colored keys which look great. They key caps themselves are a DSA profile which I have never tried before. There will be white back-lighting which I think will look nice on the silver back-plate. I got this board with the Zealios 67g Tactile (Purple) switches. These switches, like the keyboard, are also designed by a member of the mechanical keyboard enthusiast community. I got the tactile version since I hear these switches are as smooth as butter and I wanted some feedback when I type. They have a pretty high actual force as well. I think it will translate to a superior typing experience. I will write up a full review when I get the keyboard in hand!
 
 **Ajazz AK33 RGB**
-![Varmilo_VA87MR](/content/images/2016/04/ajazz_ak33.png)
+![Varmilo_VA87MR](/img/keyboard/ajazz_ak33.png)
 I got this board primarily for the LED backlighting because it has so many options. [Check out a video of the options here](http://www.youtube.com/watch?v=RzoZ7rG0x0c&t=6m34s). The board is pretty cheap at $60 on Amazon but I got it on a lightning deal for $48. The form factor is a 65% but it's got a function key row which makes it a little more _functional_. But serious, it does make it more practical for everyday use. It's got Zorro blue switches. The Zorro brand is new to me. This gave it just the right amount of uniqueness from my other boards and I was willing to give it a try.
 -->
 </section>
