--- a/mechanical-keyboards.html
+++ b/mechanical-keyboards.html
@@ -152,7 +152,7 @@
 </table>
 <h2 id="keycaps">Keycaps</h2>
 <ul>
-<li><a href="/dev-tty-keycaps/">/dev/tty Matt3o MT3 Custom Keycap Set</a></li>
+<li><a href="/dev-tty-keycaps">/dev/tty Matt3o MT3 Custom Keycap Set</a></li>
 <li>GMK Jessica Plum Custom Keycap Set</li>
 <li>GMK T0mb3ry Yuri Custom Keycap Set</li>
 <li>GMK Zambumon Nautilus Custom Keycap Set</li>
