--- a/404.html
+++ b/404.html
@@ -54,6 +54,7 @@
 <script type='text'javascript'>
 var currentUrl = window.location.href;
 var lastChar = currentUrl.substr(currentUrl.length - 1);
+alert(currentUrl);
 if(lastChar === '/')
 {
 	var prevSpot = currentUrl.lastIndexOf('/', 1);
