--- a/404.html
+++ b/404.html
@@ -51,7 +51,7 @@
 <main id="content" class="content" role="main">
 <div id="article" class="box ">
 <p>The page you are looking for could not be found.</p>
-<script type='text'javascript'>
+<script type='text/javascript'>
 var currentUrl = window.location.href;
 var lastChar = currentUrl.substr(currentUrl.length - 1);
 alert(currentUrl);
