--- a/404.html
+++ b/404.html
@@ -57,6 +57,7 @@ var lastChar = currentUrl.substr(currentUrl.length - 1);
 alert(currentUrl);
 if(lastChar === '/')
 {
+    //test
 	var prevSpot = currentUrl.lastIndexOf('/', currentUrl.length - 1);
 	var slug = currentUrl.substring(prevSpot, currentUrl.length - 1);
     alert(slug);
