--- a/404.html
+++ b/404.html
@@ -54,21 +54,18 @@
 <script type='text/javascript'>
 var currentUrl = window.location.href;
 var lastChar = currentUrl.substr(currentUrl.length - 1);
-alert(currentUrl);
-if(lastChar === '/')
-{
-    //test2
-    //https://www.domain.com/about/
+if(lastChar === '/') {
 	var prevSpot = currentUrl.lastIndexOf('/', currentUrl.length - 2);
-	var slug = currentUrl.substring(prevSpot, currentUrl.length - 1);
-    alert(slug);
-    var slugs = ["above", "about", "albiet"];
-    for (i = 0; i < slugs.length; i++) {
-        if(slug === slugs[i])
-        {
-            alert('found');
-        }
-    }
+	var slug = currentUrl.substring(prevSpot + 1, currentUrl.length - 1);
+	var slugs = ["2016-conferences","about","active-page-report-generator","advanced-tfs-build-process","application-security-and-single-sign-on","are-coding-bootcamps-worth-it","automated-build-processing-with-tfs","automated-ecu-testing","automated-ecu-testing-part-2","automated-ecu-testing-part-3","automatically-creating-sprites-from-css-using-bundler-net","autonomous-cars-are-a-long-way-off","cast-hacking","c-cryptography-library-md5-sha1-sha2-aes-3des","c-date-format-regular-expression","choosing-a-service-framework","code-keyboard","connected-cars-and-fuel-efficiency","convert-a-list-to-csv","dev-tty-keycaps","digitalblasphemy-com-updater-for-windows","encryptor-extension-for-vs-code","error-tf54000-when-creating-a-new-team-project-in-tfs-2013","evolution-of-the-javascript-rule-engine","expiring-links-after-a-given-timeframe","file-system-monitor","generate-an-enum-from-a-sql-server-database-table","google-fonts-installer","got-website-backups-left-online","how-to-detect-and-stop-a-car-from-being-hacked","improving-webapi-performance-with-jil-and-protocol-buffers","interface-to-rpc-service","introducing-ruleplex","issues-running-redis-in-azure","job-seeker-advice","linq-js-crud-methods","locking-by-key","losing-our-memory","max-keyboard-nighthawk-x8-review","mechanical-keyboards","meetup-using-protobuf-in-net","net-javascript-engine-performance-results","net-javascript-engine-performance-results-updated-2016","online-markdown-editor-encrypting-files-to-the-cloud","paranoid-nerd","pngout-an-entire-directory-in-windows","presenting-ruleplex-at-1million-cups","redis-flush-tool-for-windows","rock-paper-azure-challenge-bot","running-asp-net-on-ubuntu","run-sql-query-and-email-results","secure-password-generator-app","serializing-non-serializable-types-with-protobuf","stopwatch-class-in-javascript","supporting-one-language-makes-ruleplex-intrinsically-faster","temp-slug-23","temp-slug-24","temp-slug-25","temp-slug-26","temp-slug-38","temp-slug-44","temp-slug-48","temp-slug-54","tesoro-shrike-h2l-laser-gaming-mouse-review","trick-for-debugging-parallel-code","trimming-the-fat-off-of-http-endpoints","turboobject","unit-testing-azure-storage-in-tfs-build-server","update-your-lync-personal-note-to-show-whats-playing-in-aimp","using-a-custom-default-font-color-in-lync-2010","using-bootstrap-in-wordpress-admin-panel","using-gridview-rowcommand","using-repeater-itemcommand","varmilo-va87mr","which-net-javascript-engine-is-the-fastest","winzopfli-png-compression-tool-for-windows"];
+	for (i = 0; i < slugs.length; i++) {
+		if(slug === slugs[i])
+		{
+			var nextUrl = currentUrl.substring(0, currentUrl.length - 1);
+			window.location.replace(nextUrl);
+			break;
+		}
+	}
 }
 </script>
 </div>
