--- a/2016-conferences.html
+++ b/2016-conferences.html
@@ -73,6 +73,18 @@
 <a href="https://www.defcon.org/">DEF CON</a> is a large and elite hacker conference. This is the kind of place you don’t take a computer to, and you turn off your cell phone, for fear of being hacked. Conferences like this usually have a shame board where people who are hacked get publicly mocked. The FBI shows up (somewhat undercover-there are also “spot the fed” games) They don’t sell tickets online or take credit cards once you’re there – nope, cash only! This conference is still up in the air for me because there is a <a href="http://www.multirace.com/events/26">triathlon/vacation that I would like to take in Siesta Key</a> the same weekend. Maybe I will go to <a href="https://hopeconf.wordpress.com/">Hope 11</a> instead.</p>
 </section>
 <footer class='post-footer'>
+<section class='share'>
+<h4>Share this post</h4>
+<a class='fa fa-twitter' href='https://twitter.com/share?text=2016+Conferences&amp;url=' onclick='window.open(this.href + window.location.href, 'twitter-share', 'width=550,height=235');return false;' target='_blank'>
+<span class='hidden'>Twitter</span>
+</a>
+<a class='fa fa-facebook' href='https://www.facebook.com/sharer/sharer.php?u=' onclick='window.open(this.href + window.location.href, 'facebook-share','width=580,height=296');return false;' target='_blank'>
+<span class='hidden'>Facebook</span>
+</a>
+<a class='fa fa-google' href='https://plus.google.com/share?url=' onclick='window.open(this.href + window.location.href, 'google-plus-share', 'width=490,height=530');return false;' target='_blank'>
+<span class='hidden'>Google+</span>
+</a>
+</section>
 </footer>
 <div id="disqus_thread">
 	<iframe id="dsq-app9441" name="dsq-app9441" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px !important; min-width: 100% !important; border: medium none !important; overflow: hidden !important; height: 727px !important;" src="https://disqus.com/embed/comments/?base=default&amp;f=rushfrisby&amp;t_i=&amp;t_u=https%3A%2F%2Frushfrisby.com%2Finterface-to-rpc-service%2F&amp;t_d=Interface%20to%20RPC%20Service&amp;t_t=Interface%20to%20RPC%20Service&amp;s_o=default#version=f51929c5205670fde13c1721baf9ca15" horizontalscrolling="no" verticalscrolling="no" width="100%" frameborder="0"></iframe>
