--- a/expiring-links-after-a-given-timeframe.html
+++ b/expiring-links-after-a-given-timeframe.html
@@ -88,6 +88,18 @@
 <p><strong>Update 12/30/2015:</strong><a href="https://www.webucator.com">Webucator.com</a> asked me if they could create a video on this blog post which I agreed to. You can <a href="https://www.youtube.com/watch?v=rRBkQUnXrTM">check out the video on youtube here</a>. It turned out great! Webucator has more good <a href="https://www.webucator.com/microsoft-training/csharp.cfm">C# training material</a> on their website as well. The video on this blog post is part of their “<a href="https://www.webucator.com/self-paced-courses/course/c-sharp-solutions-from-the-web.cfm">C# Solutions from the Web</a>” course, which is free!</p>
 </section>
 <footer class='post-footer'>
+<section class='share'>
+<h4>Share this post</h4>
+<a class='fa fa-twitter' href='https://twitter.com/share?text=Expiring+links+after+a+given+timeframe&amp;url=' onclick='window.open(this.href + window.location.href, 'twitter-share', 'width=550,height=235');return false;' target='_blank'>
+<span class='hidden'>Twitter</span>
+</a>
+<a class='fa fa-facebook' href='https://www.facebook.com/sharer/sharer.php?u=' onclick='window.open(this.href + window.location.href, 'facebook-share','width=580,height=296');return false;' target='_blank'>
+<span class='hidden'>Facebook</span>
+</a>
+<a class='fa fa-google' href='https://plus.google.com/share?url=' onclick='window.open(this.href + window.location.href, 'google-plus-share', 'width=490,height=530');return false;' target='_blank'>
+<span class='hidden'>Google+</span>
+</a>
+</section>
 </footer>
 <div id="disqus_thread">
 	<iframe id="dsq-app9441" name="dsq-app9441" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px !important; min-width: 100% !important; border: medium none !important; overflow: hidden !important; height: 727px !important;" src="https://disqus.com/embed/comments/?base=default&amp;f=rushfrisby&amp;t_i=&amp;t_u=https%3A%2F%2Frushfrisby.com%2Finterface-to-rpc-service%2F&amp;t_d=Interface%20to%20RPC%20Service&amp;t_t=Interface%20to%20RPC%20Service&amp;s_o=default#version=f51929c5205670fde13c1721baf9ca15" horizontalscrolling="no" verticalscrolling="no" width="100%" frameborder="0"></iframe>
