--- a/losing-our-memory.html
+++ b/losing-our-memory.html
@@ -89,6 +89,18 @@
 <p>In conclusion, I don't expect .NET developers will actively pay attention to memory management. They should keep it in the back of their mind at all times though. It's important to know how the framework you are working with deals with memory. It would be a good investment to dig deep into it when beginning to learn a new framework. Once .NET Core becomes more prevalent I expect memory management will garner some attention, but ultimately it will end up in the state that .NET Framework developers are in now - ignorance.</p>
 </section>
 <footer class='post-footer'>
+<section class='share'>
+<h4>Share this post</h4>
+<a class='fa fa-twitter' href='https://twitter.com/share?text=Losing+Our+Memory&amp;url=' onclick='window.open(this.href + window.location.href, 'twitter-share', 'width=550,height=235');return false;' target='_blank'>
+<span class='hidden'>Twitter</span>
+</a>
+<a class='fa fa-facebook' href='https://www.facebook.com/sharer/sharer.php?u=' onclick='window.open(this.href + window.location.href, 'facebook-share','width=580,height=296');return false;' target='_blank'>
+<span class='hidden'>Facebook</span>
+</a>
+<a class='fa fa-google' href='https://plus.google.com/share?url=' onclick='window.open(this.href + window.location.href, 'google-plus-share', 'width=490,height=530');return false;' target='_blank'>
+<span class='hidden'>Google+</span>
+</a>
+</section>
 </footer>
 <div id="disqus_thread">
 	<iframe id="dsq-app9441" name="dsq-app9441" allowtransparency="true" scrolling="no" tabindex="0" title="Disqus" style="width: 1px !important; min-width: 100% !important; border: medium none !important; overflow: hidden !important; height: 727px !important;" src="https://disqus.com/embed/comments/?base=default&amp;f=rushfrisby&amp;t_i=&amp;t_u=https%3A%2F%2Frushfrisby.com%2Finterface-to-rpc-service%2F&amp;t_d=Interface%20to%20RPC%20Service&amp;t_t=Interface%20to%20RPC%20Service&amp;s_o=default#version=f51929c5205670fde13c1721baf9ca15" horizontalscrolling="no" verticalscrolling="no" width="100%" frameborder="0"></iframe>
